# chemflow-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: codex-selfhost-review.yml  publish.yml  test.yml
src/chemflow_client/: __init__.py  api.py  ase_adapter.py  client.py  config.py  constants.py  exceptions.py  types.py  widget.py
tests/: test_ase_adapter.py  test_client.py  test_widget_helpers.py
