[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemflow-client"
version = "0.1.7"
description = "Public Python client for ChemFlow 3D chat editing"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "ChemFlow" }
]
keywords = ["chemistry", "molecular-modeling", "ase", "jupyter", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "ase>=3.22",
  "httpx>=0.27"
]

[project.optional-dependencies]
notebook = [
  "anywidget>=0.9",
  "traitlets>=5.14"
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "twine>=6.0"
]

[project.urls]
Homepage = "https://chemflow.cloud"
Repository = "https://github.com/SingletC/chemflow-client"
Issues = "https://github.com/SingletC/chemflow-client/issues"
Documentation = "https://chemflow.cloud/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
